--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -5,15 +5,18 @@
     align-items: center;
     z-index: 1;
     box-shadow: map-get($box-shadow, head);
+    padding: 14px 0 4px;
+    @include bp (mobile) {
+        padding: 30px 0;
+    }
 
     &__logo {
-        padding: 10px 0;
+        padding: 0;
         width: 162px;
         height: 44px;
         @include bp (mobile){
             width: 200px;
             height: 34px;
-            padding: 30px;
         }
     }
     &__back {
