--- a/sass/Pages/_home.scss
+++ b/sass/Pages/_home.scss
@@ -23,13 +23,13 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin: 30px 25px;
+    margin: 0px 25px 30px;
     &__heading {
         color: $color-font-primary;
         font-size: map-get($font-size, Title);
         font-weight: map-get($font-weight, Bold);
         @include bp (mobile) {
-            padding: 30px 0;
+            padding: 30px 0 20px;
             @include heading-title;
         }
     }
@@ -64,7 +64,7 @@
         padding:30px 100px 50px;
     }
     @include bp (tab) {
-            padding: 30px 180px 50px;
+            padding: 37px 180px 50px;
     }
 
     &__title {
@@ -72,7 +72,7 @@
         width: 100%;
         margin: 0 0 2px;
         @include bp (mobile) {
-            padding-top: 20px;
+            padding-top: 9px;
         }
     }
     &__step {
