--- a/sass/Pages/_page-restaurant.scss
+++ b/sass/Pages/_page-restaurant.scss
@@ -6,13 +6,20 @@
 
 .image-hero {
     width: 100%;
-    height: 237px;
+    height: 220px;
     position: relative;
+    @include bp (mobile) {
+        height: 345px;
+    }
     & img {
         height: 275px;
         width: 100%;
         box-sizing: border-box;
         object-fit: cover;
+        @include bp (mobile) {
+            height: 385px;
+            object-position: 0% 58%;
+        }
     }
 }
 /** CONTENU **/
@@ -36,10 +43,11 @@
     width: 100%;
     @include bp (mobile) {
         padding: 51px 160px 40px;
-        width: 75%;
+        width: 73%;
+        gap: 46px;
     }
     @include bp (tab) {
-        padding: 51px 210px 40px;
+        padding: 51px 208px 40px;
     }
 
 
@@ -75,10 +83,13 @@
         border-bottom: 3px solid $color-badge;
         width: 40px;
         padding-bottom: 8px;
-        margin-bottom: 12px;
+        margin-bottom: 0;
+        @include bp (mobile){
+            margin: 0;
+        }
     }
     &__card {
-        padding: 15px 12px;
+        padding: 10px 30px 10px 14px;
         background: $color-white;
         border-radius: 15px;
         overflow: hidden;
@@ -92,11 +103,14 @@
             &--#{$box} {
                 animation-delay: $anim-delay * $box;
             }
+        @include bp (mobile){
+            padding: 10px 18px;
+        }
         }
         & .choice {
             display: flex;
             flex-direction: column;
-            gap: 5px;
+            gap: 6px;
             white-space: nowrap;
             overflow: hidden;
             flex: 1;
@@ -120,7 +134,7 @@
             font-size: map-get($font-size, Detail);
             font-weight: map-get($font-weight, Bold);
             align-self: flex-end;
-            padding: 0px 26px;
+            padding: 0px 18px;
             & p{
                 margin: 0;
             }
@@ -135,8 +149,11 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            margin: -20px -71px -20px -16px;
+            margin: -20px -90px -20px 0px;
             transition: margin-right 300ms linear;
+            @include bp (mobile) {
+                margin: -20px -80px -20px 0px;
+            }
             & i{
                 font-size: 20px;
                 transform: rotate(-360deg);
@@ -144,7 +161,10 @@
             }
         }        
         &:hover > .check {
-            margin-right: -15px;
+            margin-right: -34px;
+            @include bp (mobile) {
+                margin-right: -18px;
+            }
             & > i{
                 transform: rotate(0);
             }
