--- a/sass/Pages/_home.scss
+++ b/sass/Pages/_home.scss
@@ -23,7 +23,10 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin: 0px 25px 30px;
+    margin: 42px 40px 50px;
+    @include bp (mobile) {
+        margin: 0 40px 50px;
+    }
     &__heading {
         color: $color-font-primary;
         font-size: map-get($font-size, Title);
@@ -64,7 +67,7 @@
         padding:30px 100px 50px;
     }
     @include bp (tab) {
-            padding: 37px 180px 50px;
+            padding: 20px 180px 50px;
     }
 
     &__title {
